istio_1.1/egress/02_httpbin-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.192.168.122.60.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.192.168.122.60.nip.io"
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin-v1
        port:
          number: 80
